--- a/index.html
+++ b/index.html
@@ -5,37 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="#" rel="noreferrer noopener" class=logo-link><span class="logo-span">Web</span>Studio</a>
-        <ul class="munu">
-            <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link active">Студия</a></li>
-            <li class="munu-list"><a href="./portfolio.html" target="_blank" rel="noreferrer noopener" class="menu-link">Портфолио</a></li>
-            <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link">Контакты</a></li>
-        </ul>
-    </nav>
-        <ul class="content">
-            <li class="content-list">
-                <a href="mailto:info@devstudio.com" class="content-link">info@devstudio.com</a>
-            </li>
-            <li class="content-list">
-                <a href="tel:0961111111" class="content-link">096 111 11 11</a>
-            </li>
-        </ul>
+    <header class="header">
+        <div class="container container-nav">
+            <nav class="nav">
+            <a href="#" rel="noreferrer noopener" class=logo-link><span class="logo-span">Web</span>Studio</a>
+            <ul class="munu">
+                <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link active">Студия</a></li>
+                <li class="munu-list"><a href="./portfolio.html" target="_blank" rel="noreferrer noopener" class="menu-link">Портфолио</a></li>
+                <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link">Контакты</a></li>
+            </ul>
+            </nav>
+            <ul class="content">
+                <li class="content-list">
+                    <a href="mailto:info@devstudio.com" class="content-link">info@devstudio.com</a>
+                </li>
+                <li class="content-list">
+                    <a href="tel:0961111111" class="content-link">096 111 11 11</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
     <section class="effective">
-        <h1 class="effective-title">Эффективные решения<br /> для вашего бизнеса</h1>
-        <button type="button" class="effective-btn">Заказать услугу</button> 
+        <div class="container container-effective">
+            <h1 class="effective-title">Эффективные решения<br /> для вашего бизнеса</h1>
+            <button type="button" class="effective-btn">Заказать услугу</button>
+        </div>
     </section>
 
     <section class="рeculiarities">
-        <h2 class="hide">Особенности</h2>
-        <ul class="рeculiarities-list">
+        <div class="container">
+            <h2 class="hide">Особенности</h2>
+                <ul class="рeculiarities-list">
             <li class="рeculiarities-block">
                 <h3 class="рeculiarities-title">Внимание к деталям</h3>
                 <p class="рeculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -52,68 +58,77 @@
                 <h3 class="рeculiarities-title">Современные технологии</h3>
                 <p class="рeculiarities-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
-        </ul>
+                </ul>
+        </div
     </section>
     <section class="we-doing">
-        <h2>Чем мы занимаемся</h2>
-        <ul class="we-doing-block">
+        <div class="container">
+            <h2 class="we-doing-title">Чем мы занимаемся</h2>
+                <ul class="we-doing-block">
             <li class="we-doing-list">
                 <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
                     <image src="./image/we_do_1.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
+                 </a>
+                </li>
+
+                <li class="we-doing-list">
+                <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
+                    <image src="./image/we_do_2.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
                 </a>
             </li>
-            <li class="we-doing-list">
-                <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link>
-                    <image src="./image/we_do_2.jpg" alt="Адаптивная верстка" width="370"; height="294">
+
+                <li class="we-doing-list">
+                <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
+                    <image src="./image/we_do_3.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
                 </a>
-            </li>
-            <li class="we-doing-list">
-                <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link>
-                    <image src="./image/we_do_3.jpg" alt="Генератор цветовой палитры" width="370"; height="294">
-                </a>
-            </li>
-        </ul>
+                </li>
+                </ul>
+        </div>
     </section>
     <section class="our-team">
-       <h2>Наша команда</h2>
-       <ul class="our-team-block">
-           <li class="our-team-list">
-               <image src="./image/team_1.jpg" alt="Игорь Демьяненко Product Designer" width="270"; height="260" class="our-team-image">
-               <h3 class="our-team-title">Игорь Демьяненко</h3>
-               <p class="our-team-text">Product Designer</p>
-           </li>
-           <li class="our-team-list">
-               <image src="./image/team_2.jpg" alt="Ольга Репина Frontend Developer" width="270" height="260" class="our-team-image">
-               <h3 class="our-team-title">Ольга Репина</h3>
-               <p class="our-team-text">Frontend Developer</p>
+        <div class="container">
+            <h2 class="our-team-title">Наша команда</h2>
+                <ul class="our-team-block">
+                    <li class="our-team-list">
+                        <image src="./image/team_1.jpg" alt="Игорь Демьяненко Product Designer" width="270"; height="260" class="our-team-image">
+                        <h3 class="our-team-title">Игорь Демьяненко</h3>
+                        <p class="our-team-text">Product Designer</p>
+                    </li>
+                    <li class="our-team-list">
+                        <image src="./image/team_2.jpg" alt="Ольга Репина Frontend Developer" width="270" height="260" class="our-team-image">
+                        <h3 class="our-team-title">Ольга Репина</h3>
+                        <p class="our-team-text">Frontend Developer</p>
 
-           </li>
-           <li class="our-team-list">
-               <image src="./image/team_3.jpg" alt="Николай Тарасов Marketing" width="270" height="260" class="our-team-image">
-               <h3 class="our-team-title">Николай Тарасов</h3>
-               <p class="our-team-text">Marketing</p>
-           </li>
-           <li class="our-team-list">
-               <image src="./image/team_4.jpg" alt="Михаил Ермаков UI Designer" width="270" height="260" class="our-team-image">
-               <h3 class="our-team-title">Михаил Ермаков</h3>
-               <p class="our-team-text">UI Designer</p>
-           </li>
-       </ul>
+                    </li>
+                    <li class="our-team-list">
+                        <image src="./image/team_3.jpg" alt="Николай Тарасов Marketing" width="270" height="260" class="our-team-image">
+                        <h3 class="our-team-title">Николай Тарасов</h3>
+                        <p class="our-team-text">Marketing</p>
+                    </li>
+                    <li class="our-team-list">
+                        <image src="./image/team_4.jpg" alt="Михаил Ермаков UI Designer" width="270" height="260" class="our-team-image">
+                        <h3 class="our-team-title">Михаил Ермаков</h3>
+                        <p class="our-team-text">UI Designer</p>
+                    </li>
+                </ul>
+        </div>
     </section>
     </main>
     <footer>
-        <a href="" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
-        <address>
-            <ul class="footer-content">
-                <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-list">
-                    <a href="mailto:info@devstudio.com" rel="noreferrer noopener" class="footer-link">info@devstudio.com</a>
-                </li>
-                <li class="footer-list">
-                    <a href="tel:0961111111" rel="noreferrer noopener" class="footer-link">096 111 11 11</a>
-                </li>
-            </ul>          
-       </address>
+        <div class="container">
+            <a href="" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
+            <address>
+                <ul class="footer-content">
+                    <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li class="footer-list">
+                        <a href="mailto:info@devstudio.com" rel="noreferrer noopener" class="footer-link">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list">
+                        <a href="tel:0961111111" rel="noreferrer noopener" class="footer-link">096 111 11 11</a>
+                    </li>
+                </ul>          
+            </address>
+        </div>
     </footer>
 
 </body>
