--- a/portfolio.html
+++ b/portfolio.html
@@ -5,131 +5,137 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+     <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html" rel="noreferrer noopener" class="logo-link"><span class="logo-span">Web</span>Studio</a>
-        <ul class="munu">
-            <li class="munu-list"><a href="./index.html" target="_blank" rel="noreferrer noopener" class="menu-link">Студия</a></li>
-            <li class="munu-list"><a href="./portfolio.html" target="_blank" rel="noreferrer noopener" class="menu-link active" >Портфолио</a></li>
-            <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link">Контакты</a></li>
-        </ul>
-    </nav>
-        <ul class="content">
-            <li class="content-list">
-                <a href="mailto:info@devstudio.com" class="content-link">info@devstudio.com</a>
-            </li>
-            <li class="content-list">
-                <a href="tel:0961111111" class="content-link">096 111 11 11</a>
-            </li>
-        </ul>
+    <header class="header">
+        <div class="container container-nav">
+            <nav class="nav">
+            <a href="./index.html" rel="noreferrer noopener" class="logo-link"><span class="logo-span">Web</span>Studio</a>
+            <ul class="munu">
+                <li class="munu-list"><a href="./index.html" target="_blank" rel="noreferrer noopener" class="menu-link">Студия</a></li>
+                <li class="munu-list"><a href="./portfolio.html" target="_blank" rel="noreferrer noopener" class="menu-link active" >Портфолио</a></li>
+                <li class="munu-list"><a href="#" target="_blank" rel="noreferrer noopener" class="menu-link">Контакты</a></li>
+            </ul>
+            </nav>
+            <ul class="content">
+                <li class="content-list">
+                    <a href="mailto:info@devstudio.com" class="content-link">info@devstudio.com</a>
+                </li>
+                <li class="content-list">
+                    <a href="tel:0961111111" class="content-link">096 111 11 11</a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
     
 <section class="portfolio">
-    <h1 class="hide">Portfolio</h1>
-    <ul class="portfolio-group">
-        <li class="portfolio-list">
-            <button type="button" class="portfolio-button">Все</button>
-        </li>
-        <li class="portfolio-list">
-            <button type="button" class="portfolio-button">Веб-сайты</button>
-        </li>
-        <li class="portfolio-list">
-            <button type="button" class="portfolio-button">Приложения</button>
-        </li>
-        <li class="portfolio-list">
-            <button type="button" class="portfolio-button">Дизайн</button>
-        </li>
-        <li class="portfolio-list">
-            <button type="button" class="portfolio-button">Маркетинг</button>
-        </li>
-    </ul>
+    <div class="container">
+        <h1 class="hide">Portfolio</h1>
+            <ul class="portfolio-group">
+                <li class="portfolio-list">
+                    <button type="button" class="portfolio-button">Все</button>
+                </li>
+                <li class="portfolio-list">
+                    <button type="button" class="portfolio-button">Веб-сайты</button>
+                </li>
+                <li class="portfolio-list">
+                    <button type="button" class="portfolio-button">Приложения</button>
+                </li>
+                <li class="portfolio-list">
+                    <button type="button" class="portfolio-button">Дизайн</button>
+                </li>
+                <li class="portfolio-list">
+                    <button type="button" class="portfolio-button">Маркетинг</button>
+                </li>
+            </ul>
 
-    <ul class="gallery">
-        <li>
-        <a href="#">
-        <img src="./image/website_1.jpg" alt="Технокряк" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Технокряк</h2>
-            <p class="gallery-text">Веб-сайт</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/basketball_2.jpg" alt="New Orlean vs Golden Star" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
-            <p class="gallery-text">Дизайн</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/seafood_3.jpg" alt="Ресторан Seafood" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Ресторан Seafood</h2>
-            <p class="gallery-text">Приложение</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/headphones_4.jpg" alt="Проект Prime" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Проект Prime</h2>
-            <p class="gallery-text">Маркетинг</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/box_5.jpg" alt="Проект Boxes" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Проект Boxes</h2>
-            <p class="gallery-text">Приложение</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/interface_6.jpg" alt="Вдохновение не имеет границ" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Inspiration has no Borders</h2>
-            <p class="gallery-text">Веб-сайт</p>
-        </a>     
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/magazine_7.jpg" alt="Издание Limited Edition"  class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Издание Limited Edition</h2>
-            <p class="gallery-text">Дизайн</p>
-        </a>        
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/tag_8.jpg" alt="Проект LAB" class="gallery-image" width="370"; height="294"/>
-            <h2 class="gallery-title">Проект LAB</h2>
-            <p class="gallery-text">Маркетинг</p>
-        </a>
-        </li>
-        <li>
-        <a href="#">
-        <image src="./image/business_work_9.jpg" alt="Growing Business" class="gallery-image" width="370"; height="294"/>
-          <h2 class="gallery-title">Growing Business</h2>
-          <p class="gallery-text">Приложение</p>
-        </a>
-        </li>
-    </ul>
-
+            <ul class="gallery">
+                <li class="gallery-list">
+                <a href="#">
+                <img src="./image/website_1.jpg" alt="Технокряк" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Технокряк</h2>
+                    <p class="gallery-text">Веб-сайт</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/basketball_2.jpg" alt="New Orlean vs Golden Star" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="gallery-text">Дизайн</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/seafood_3.jpg" alt="Ресторан Seafood" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Ресторан Seafood</h2>
+                    <p class="gallery-text">Приложение</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/headphones_4.jpg" alt="Проект Prime" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Проект Prime</h2>
+                    <p class="gallery-text">Маркетинг</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/box_5.jpg" alt="Проект Boxes" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Проект Boxes</h2>
+                    <p class="gallery-text">Приложение</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/interface_6.jpg" alt="Вдохновение не имеет границ" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Inspiration has no Borders</h2>
+                    <p class="gallery-text">Веб-сайт</p>
+                </a>     
+                </li class="gallery-list">
+                <li>
+                <a href="#">
+                <image src="./image/magazine_7.jpg" alt="Издание Limited Edition"  class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Издание Limited Edition</h2>
+                    <p class="gallery-text">Дизайн</p>
+                </a>        
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/tag_8.jpg" alt="Проект LAB" class="gallery-image" width="370"; height="294"/>
+                    <h2 class="gallery-title">Проект LAB</h2>
+                    <p class="gallery-text">Маркетинг</p>
+                </a>
+                </li>
+                <li class="gallery-list">
+                <a href="#">
+                <image src="./image/business_work_9.jpg" alt="Growing Business" class="gallery-image" width="370"; height="294"/>
+                <h2 class="gallery-title">Growing Business</h2>
+                <p class="gallery-text">Приложение</p>
+                </a>
+                </li>
+            </ul>
+    </div>
 </section>
     </main>
     <footer>
-        <a href="" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
-        <address>
-            <ul class="footer-content">
-                <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
-                <li class="footer-list">
-                    <a href="mailto:info@devstudio.com" rel="noreferrer noopener" class="footer-link">info@devstudio.com</a>
-                </li>
-                <li class="footer-list">
-                    <a href="tel:0961111111" rel="noreferrer noopener" class="footer-link">096 111 11 11</a>
-                </li>
-            </ul>          
-       </address>
+        <div class="container">
+            <a href="#" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
+            <address>
+                <ul class="footer-content">
+                    <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
+                    <li class="footer-list">
+                        <a href="mailto:info@devstudio.com" rel="noreferrer noopener" class="footer-link">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list">
+                        <a href="tel:0961111111" rel="noreferrer noopener" class="footer-link">096 111 11 11</a>
+                    </li>
+                </ul>          
+            </address>
+        </div> 
     </footer>
 
 </body>
