--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     </header>
     <main>
     
-<section class="portfolio">
+<section class="section portfolio">
     <div class="container">
         <h1 class="hide">Portfolio</h1>
             <ul class="portfolio-group">
@@ -55,76 +55,94 @@
 
             <ul class="gallery">
                 <li class="gallery-list">
-                <a href="#">
-                <img src="./image/website_1.jpg" alt="Технокряк" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Технокряк</h2>
-                    <p class="gallery-text">Веб-сайт</p>
+                    <a href="#">
+                        <img src="./image/website_1.jpg" alt="Технокряк" class="gallery-image" width="370" />
+                        <div class="gallery-cont">
+                            <h2 class="gallery-title">Технокряк</h2>
+                            <p class="gallery-text">Веб-сайт</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="gallery-list">
+                    <a href="#">
+                    <image src="./image/basketball_2.jpg" alt="New Orlean vs Golden Star" class="gallery-image" width="370" />
+                        <div class="gallery-cont">
+                            <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="gallery-text">Дизайн</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="gallery-list">
+                    <a href="#">
+                        <image src="./image/seafood_3.jpg" alt="Ресторан Seafood" class="gallery-image" width="370" />
+                        <div class="gallery-cont">
+                            <h2 class="gallery-title">Ресторан Seafood</h2>
+                            <p class="gallery-text">Приложение</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="gallery-list">
+                    <a href="#">
+                        <image src="./image/headphones_4.jpg" alt="Проект Prime" class="gallery-image" width="370" />
+                            <div class="gallery-cont">
+                                <h2 class="gallery-title">Проект Prime</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
+                    </a>
+                </li>
+                <li class="gallery-list">
+                    <a href="#">
+                        <image src="./image/box_5.jpg" alt="Проект Boxes" class="gallery-image" width="370" />
+                            <div class="gallery-cont">
+                                <h2 class="gallery-title">Проект Boxes</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
                 </a>
                 </li>
                 <li class="gallery-list">
-                <a href="#">
-                <image src="./image/basketball_2.jpg" alt="New Orlean vs Golden Star" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="gallery-text">Дизайн</p>
-                </a>
+                    <a href="#">
+                        <image src="./image/interface_6.jpg" alt="Вдохновение не имеет границ" class="gallery-image" width="370" />
+                            <div class="gallery-cont">
+                                <h2 class="gallery-title">Inspiration has no Borders</h2>
+                                <p class="gallery-text">Веб-сайт</p>
+                            </div>
+                    </a>     
                 </li>
                 <li class="gallery-list">
-                <a href="#">
-                <image src="./image/seafood_3.jpg" alt="Ресторан Seafood" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Ресторан Seafood</h2>
-                    <p class="gallery-text">Приложение</p>
-                </a>
+                    <a href="#">
+                        <image src="./image/magazine_7.jpg" alt="Издание Limited Edition"  class="gallery-image" width="370" />
+                            <div class="gallery-cont">
+                                <h2 class="gallery-title">Издание Limited Edition</h2>
+                                <p class="gallery-text">Дизайн</p>
+                            </div>
+                    </a>        
                 </li>
                 <li class="gallery-list">
-                <a href="#">
-                <image src="./image/headphones_4.jpg" alt="Проект Prime" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Проект Prime</h2>
-                    <p class="gallery-text">Маркетинг</p>
-                </a>
+                    <a href="#">
+                        <image src="./image/tag_8.jpg" alt="Проект LAB" class="gallery-image" width="370" />
+                            <div class="gallery-cont">
+                                <h2 class="gallery-title">Проект LAB</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
+                    </a>
                 </li>
                 <li class="gallery-list">
-                <a href="#">
-                <image src="./image/box_5.jpg" alt="Проект Boxes" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Проект Boxes</h2>
-                    <p class="gallery-text">Приложение</p>
-                </a>
-                </li>
-                <li class="gallery-list">
-                <a href="#">
-                <image src="./image/interface_6.jpg" alt="Вдохновение не имеет границ" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Inspiration has no Borders</h2>
-                    <p class="gallery-text">Веб-сайт</p>
-                </a>     
-                </li class="gallery-list">
-                <li>
-                <a href="#">
-                <image src="./image/magazine_7.jpg" alt="Издание Limited Edition"  class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Издание Limited Edition</h2>
-                    <p class="gallery-text">Дизайн</p>
-                </a>        
-                </li>
-                <li class="gallery-list">
-                <a href="#">
-                <image src="./image/tag_8.jpg" alt="Проект LAB" class="gallery-image" width="370"; height="294"/>
-                    <h2 class="gallery-title">Проект LAB</h2>
-                    <p class="gallery-text">Маркетинг</p>
-                </a>
-                </li>
-                <li class="gallery-list">
-                <a href="#">
-                <image src="./image/business_work_9.jpg" alt="Growing Business" class="gallery-image" width="370"; height="294"/>
-                <h2 class="gallery-title">Growing Business</h2>
-                <p class="gallery-text">Приложение</p>
-                </a>
+                    <a href="#">
+                        <image src="./image/business_work_9.jpg" alt="Growing Business" class="gallery-image" width="370" />
+                                <div class="gallery-cont">
+                                    <h2 class="gallery-title">Growing Business</h2>
+                                    <p class="gallery-text">Приложение</p>
+                                </div>
+                    </a>
                 </li>
             </ul>
     </div>
 </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
             <a href="#" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <ul class="footer-content">
                     <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
                     <li class="footer-list">
