--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section class="рeculiarities">
         <div class="container">
-            <h2 class="hide">Особенности</h2>
+            <h2 class="рeculiarities-tit-hide">Особенности</h2>
                 <ul class="рeculiarities-list">
             <li class="рeculiarities-block">
                 <h3 class="рeculiarities-title">Внимание к деталям</h3>
@@ -59,7 +59,7 @@
                 <p class="рeculiarities-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
                 </ul>
-        </div
+            </div>
     </section>
     <section class="we-doing">
         <div class="container">
@@ -67,19 +67,19 @@
                 <ul class="we-doing-block">
             <li class="we-doing-list">
                 <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
-                    <image src="./image/we_do_1.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
+                    <image src="./image/we_do_1.jpg" alt="Схемы алгоритмов работы" width="370" />
                  </a>
                 </li>
 
                 <li class="we-doing-list">
                 <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
-                    <image src="./image/we_do_2.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
+                    <image src="./image/we_do_2.jpg" alt="Схемы алгоритмов работы" width="370" />
                 </a>
             </li>
 
                 <li class="we-doing-list">
                 <a href="#" target="_blank" rel="noreferrer noopener" class="we-doing-link">
-                    <image src="./image/we_do_3.jpg" alt="Схемы алгоритмов работы" width="370"; height="294">
+                    <image src="./image/we_do_3.jpg" alt="Схемы алгоритмов работы" width="370" />
                 </a>
                 </li>
                 </ul>
@@ -87,37 +87,44 @@
     </section>
     <section class="our-team">
         <div class="container">
-            <h2 class="our-team-title">Наша команда</h2>
+            <h2 class="our-team-title-text">Наша команда</h2>
                 <ul class="our-team-block">
                     <li class="our-team-list">
-                        <image src="./image/team_1.jpg" alt="Игорь Демьяненко Product Designer" width="270"; height="260" class="our-team-image">
-                        <h3 class="our-team-title">Игорь Демьяненко</h3>
-                        <p class="our-team-text">Product Designer</p>
+                        <image src="./image/team_1.jpg" alt="Игорь Демьяненко Product Designer" width="270"class="our-team-image">
+                            <div class="our-team-cont">
+                                <h3 class="our-team-title">Игорь Демьяненко</h3>
+                                <p class="our-team-text">Product Designer</p>
+                            </div>
                     </li>
                     <li class="our-team-list">
-                        <image src="./image/team_2.jpg" alt="Ольга Репина Frontend Developer" width="270" height="260" class="our-team-image">
-                        <h3 class="our-team-title">Ольга Репина</h3>
-                        <p class="our-team-text">Frontend Developer</p>
-
+                        <image src="./image/team_2.jpg" alt="Ольга Репина Frontend Developer" width="270" class="our-team-image">
+                            <div class="our-team-cont">
+                                <h3 class="our-team-title">Ольга Репина</h3>
+                                <p class="our-team-text">Frontend Developer</p>
+                            </div>
                     </li>
                     <li class="our-team-list">
-                        <image src="./image/team_3.jpg" alt="Николай Тарасов Marketing" width="270" height="260" class="our-team-image">
-                        <h3 class="our-team-title">Николай Тарасов</h3>
-                        <p class="our-team-text">Marketing</p>
+                        <image src="./image/team_3.jpg" alt="Николай Тарасов Marketing" width="270" class="our-team-image">
+                            <div class="our-team-cont">
+                                <h3 class="our-team-title">Николай Тарасов</h3>
+                                <p class="our-team-text">Marketing</p>
+                            </div>
                     </li>
                     <li class="our-team-list">
-                        <image src="./image/team_4.jpg" alt="Михаил Ермаков UI Designer" width="270" height="260" class="our-team-image">
-                        <h3 class="our-team-title">Михаил Ермаков</h3>
-                        <p class="our-team-text">UI Designer</p>
+                        <image src="./image/team_4.jpg" alt="Михаил Ермаков UI Designer" width="270" class="our-team-image">
+                            <div class="our-team-cont">
+                                <h3 class="our-team-title">Михаил Ермаков</h3>
+                                <p class="our-team-text">UI Designer</p>
+                            </div>
                     </li>
                 </ul>
         </div>
     </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
-            <a href="" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
-            <address>
+            <a href="#" rel="noreferrer noopener" class="logo-link link-footer"><span class="logo-span">Web</span>Studio</a>
+            <address class="address">
                 <ul class="footer-content">
                     <li class="footer-list footer-address">г. Киев, пр-т Леси Украинки, 26</li>
                     <li class="footer-list">
