--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
     </section>
 
-    <section class="рeculiarities">
+    <section class="section рeculiarities">
         <div class="container">
-            <h2 class="рeculiarities-tit-hide">Особенности</h2>
+            <h2 class="рeculiarities-tit-hide hide">Особенности</h2>
                 <ul class="рeculiarities-list">
             <li class="рeculiarities-block">
                 <h3 class="рeculiarities-title">Внимание к деталям</h3>
@@ -61,7 +61,7 @@
                 </ul>
             </div>
     </section>
-    <section class="we-doing">
+    <section class="section we-doing">
         <div class="container">
             <h2 class="we-doing-title">Чем мы занимаемся</h2>
                 <ul class="we-doing-block">
@@ -85,7 +85,7 @@
                 </ul>
         </div>
     </section>
-    <section class="our-team">
+    <section class="section our-team">
         <div class="container">
             <h2 class="our-team-title-text">Наша команда</h2>
                 <ul class="our-team-block">
